# bengkel

./: .gitignore  DEPLOY.md  MIGRATION_PLAN.md  README.md  capacitor.config.json  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
User/: .env.example  .env.local.example  README.md  index.html  package-lock.json  package.json
User/public/: manifest.webmanifest  offline.html
User/src/: App.jsx  App.tsx  index.css  types.ts
backend/: .env.example
backend/bootstrap/: app.php
backend/config/: cors.php
backend/routes/: api.php
bengkel-api/: .htaccess  database.sql  index.php
bengkel-api/config/: cors.php  database.php
bengkel-api/controllers/: AuthController.php  BookingController.php  ServiceController.php  VehicleController.php  WorkshopController.php
bengkel-api/helpers/: auth.php  response.php  validator.php
bengkel-api/models/: Booking.php  Service.php  User.php  Vehicle.php  Workshop.php
bengkel-api/routes/: api.php
docs/: DEFENSIVE_PROGRAMMING.md  SECURITY_TEST_CASES.md
public/: sw.js
server/: index.mjs
simobs_backend/: index.js  package-lock.json  package.json
simobs_customer/backend/: package-lock.json  package.json
simobs_customer/frontend/: index.html  tailwind.config.js
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx
src/lib/: mock-data.ts  utils.ts
src/pages/: AdminPages.tsx  AuthPages.tsx  BookingPage.jsx  CustomerPages.tsx  LandingPage.jsx  RegisterPage.jsx  VehiclesPage.jsx
(+83 files in other folders)
