[package]
name = "simobs"
version = "1.0.0"
description = "SIMOBS desktop shell"
authors = ["SIMOBS"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
